[project]
name = "openhands-ai"
version = "0.29.1"
description = "OpenHands: Code Less, Make More"
requires-python = ">=3.12"
dependencies = [
    "datasets",
    "pandas",
    "litellm>=1.60.0",
    "google-generativeai",
    "google-api-python-client>=2.164.0",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "termcolor",
    "seaborn",
    "docker",
    "fastapi",
    "toml",
    "uvicorn",
    "types-toml",
    "numpy",
    "json-repair",
    "browsergym-core==0.10.2",
    "html2text",
    "e2b>=1.0.5,<1.2.0",
    "pexpect",
    "jinja2>=3.1.3",
    "python-multipart",
    "boto3",
    "minio>=7.2.8",
    "gevent>=24.2.1",
    "pyarrow==19.0.1",
    "tenacity>=8.5,<10.0",
    "zope-interface==7.2",
    "pathspec>=0.12.1",
    "google-cloud-aiplatform",
    "anthropic[vertex]",
    "grep-ast==0.3.3",
    "tree-sitter>=0.24.0",
    "bashlex>=0.18",
    "pyjwt>=2.9.0",
    "dirhash",
    "python-frontmatter>=1.1.0",
    "python-docx",
    "PyPDF2",
    "python-pptx",
    "pylatexenc",
    "tornado",
    "python-dotenv",
    "pylcs>=0.1.1",
    "whatthepatch>=1.0.6",
    "protobuf>=4.21.6,<5.0.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.25.0",
    "modal>=0.66.26,<0.74.0",
    "runloop-api-client==0.26.0",
    "libtmux>=0.37,<0.40",
    "pygithub>=2.5.0",
    "joblib",
    "openhands-aci>=0.2.7",
    "python-socketio>=5.11.4",
    "redis>=5.2.0",
    "sse-starlette>=2.1.3",
    "psutil",
    "stripe>=11.5.0",
    "ipywidgets>=8.1.5",
    "qtconsole>=5.6.1",
    "memory-profiler>=0.61.0",
    "daytona-sdk==0.10.4",
    "python-json-logger>=3.2.1"
]

[project.optional-dependencies]
dev = [
    "ruff==0.11.0",
    "mypy==1.15.0",
    "pre-commit==4.2.0",
    "build"
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-forked",
    "pytest-xdist",
    "flake8",
    "openai",
    "pandas",
    "reportlab"
]
runtime = [
    "jupyterlab",
    "notebook",
    "jupyter_kernel_gateway",
    "flake8"
]
evaluation = [
    "streamlit",
    "whatthepatch",
    "retry",
    "evaluate",
    "swebench>=3.0.8",
    "swegym @ git+https://github.com/SWE-Gym/SWE-Bench-Package.git",
    "commit0",
    "func_timeout",
    "sympy",
    "gdown",
    "matplotlib",
    "seaborn",
    "tabulate",
    "browsergym==0.10.2",
    "browsergym-webarena==0.10.2",
    "browsergym-miniwob==0.10.2",
    "browsergym-visualwebarena==0.10.2",
    "boto3-stubs[s3]>=1.37.19"
]
testgeneval = [
    "fuzzywuzzy>=0.18.0",
    "rouge>=1.0.1",
    "python-levenshtein>=0.26.1,<0.28.0",
    "tree-sitter-python>=0.23.6"
]

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]
